syntax = "proto3";

package Accord;


option go_package = ".;pb";

message CreateUserRequest {
    string password = 1;
    string username = 2;
}

message CreateUserResponse {}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse { 
    string accessToken = 1;
}

message LogoutRequest {
    string accessToken = 1;
}

message LogoutResponse {}

service AuthService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}
